--- a/util/pylint.rc
+++ b/util/pylint.rc
@@ -197,7 +197,9 @@ generated-members=_fields,
                   _record_type,
                   _context_fields,
                   _records,
-                  _recordlists
+                  _recordlists,
+                  _query_fields,
+                  _segmented_query
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
