Allow SQLQuery to return SQLRecordList subclasses or single values
Signed-off-by: James Humphry <git@binecho.co.uk>

--- a/util/pylint.rc
+++ b/util/pylint.rc
@@ -195,6 +195,7 @@ generated-members=_fields,
                   _table_name,
                   __slots__,
                   _record_type,
+                  _recordlist_type,
                   _context_fields,
                   _records,
                   _recordlists,
