Make some pylint suggested improvements
Signed-off-by: James Humphry <git@binecho.co.uk>

--- a/util/pylint.rc
+++ b/util/pylint.rc
@@ -197,6 +197,7 @@ generated-members=_fields,
                   _record_type,
                   _recordlist_type,
                   _context_fields,
+                  _primary_key,
                   _records,
                   _recordlists,
                   _query_fields,
