--- a/util/pylint.rc
+++ b/util/pylint.rc
@@ -202,7 +202,8 @@ generated-members=_fields,
                   _recordlists,
                   _query_fields,
                   _segmented_query,
-                  _schema
+                  _schema,
+                  _tables
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
