Minor improvements to comments, __str__ functions etc
Signed-off-by: James Humphry <git@binecho.co.uk>

--- a/util/pylint.rc
+++ b/util/pylint.rc
@@ -203,7 +203,9 @@ generated-members=_fields,
                   _query_fields,
                   _segmented_query,
                   _schema,
-                  _tables
+                  _tables,
+                  _query,
+                  _view_name
 
 # Tells whether missing members accessed in mixin class should be ignored. A
 # mixin class is detected if its name ends with "mixin" (case insensitive).
